Add fortnightly chore scheduling